--- a/style.css
+++ b/style.css
@@ -12,9 +12,22 @@
     --secondary-color: #5A5A5D;
 }
 
+.btn-primary {
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    padding: 13px 30px;
+    /* text-align: center; */
+    /* font-family: Mulish; */
+    font-size: 20px;
+    /* font-style: normal; */
+    font-weight: 700;
+    /* line-height: normal; */
+}
+
 nav {
     max-width: 1200px;
-    border: 2px solid darkblue;
+    /* border: 2px solid darkblue; */
     min-height: 140px;
     margin: 0 auto;
     display: flex;
@@ -72,12 +85,13 @@ nav {
 
 .menu-color {
     color: #FF5400;
+
 }
 
 /* banner-section-starts */
 .header-banner-container {
     border: 2px solid darkgoldenrod;
-    background-image: url('./Images/Group13.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./Images/Group13.png');
     max-width: 1200px;
     margin: 0 auto;
     min-height: 480px;
@@ -91,8 +105,23 @@ nav {
     text-align: center;
 }
 
+.banner-text h1 {
+    color: #FFF;
+    /* font-family: Mulish; */
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
 .banner-text p {
     margin-top: 24px;
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
 }
 
 .banner-btn-item {
@@ -118,13 +147,89 @@ button {
     border: none;
     padding: 20px;
 }
-.button{
+
+.button {
     position: relative;
 }
-.button img{
+
+.button img {
     position: absolute;
-    top: 20px;
-    left: 30px;
-    color: red;
-    /* width: 10px; */
+    top: 17px;
+    left: 26px;
+    width: 24px;
+    color: #FFF;
+}
+
+.button button {
+    background: #FF5400;
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    /* font-weight: 700; */
+    line-height: normal;
+}
+
+.banner-btn-item .select-type {
+    position: relative;
+
+}
+
+.select-type img {
+    position: absolute;
+    right: 20px;
+    top: 13px;
+}
+
+/* tours section starts */
+.tour-section-container {
+    max-width: 1200px;
+    min-height: 550px;
+    margin: 100px auto;
+    display: flex;
+    /* border: 2px solid green; */
+    justify-content: space-between;
+}
+
+.tour-section-text {
+    width: 48%;
+    padding-bottom: 15px;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+
+.tour-section-img {
+    max-width: 550px;
+    min-height: 550px;
+}
+
+.tour-section-text h2 {
+    color: #131318;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.tour-section-text p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+
+.tour-section-text li {
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.tour-section-text ul>li {
+    margin-left: 28px;
+    margin-bottom: 20px;
 }
