--- a/style.css
+++ b/style.css
@@ -17,17 +17,13 @@
     background: #FF5400;
     color: #FFF;
     padding: 13px 30px;
-    /* text-align: center; */
-    /* font-family: Mulish; */
     font-size: 20px;
     /* font-style: normal; */
     font-weight: 700;
-    /* line-height: normal; */
 }
 
 nav {
     max-width: 1200px;
-    /* border: 2px solid darkblue; */
     min-height: 140px;
     margin: 0 auto;
     display: flex;
@@ -38,7 +34,6 @@ nav {
 .travel-name-container {
     width: 50%;
     display: flex;
-    border: 1px solid saddlebrown;
     align-items: center;
     /* justify-content: center; */
     text-align: center;
@@ -66,7 +61,6 @@ nav {
     text-decoration: none;
     color: #424247;
     text-align: center;
-    font-family: Mulish;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -90,9 +84,9 @@ nav {
 
 /* banner-section-starts */
 .header-banner-container {
-    border: 2px solid darkgoldenrod;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./Images/Group13.png');
     max-width: 1200px;
+    border-radius: 15px;
     margin: 0 auto;
     min-height: 480px;
     position: relative;
@@ -141,7 +135,6 @@ select,
 button {
     width: 174px;
     height: 52px;
-    flex-shrink: 0;
     border-radius: 8px;
     background: #FFF;
     border: none;
@@ -233,3 +226,433 @@ button {
     margin-left: 28px;
     margin-bottom: 20px;
 }
+
+/* tours section ends here  */
+
+/* Destination section starts here  */
+
+.destination-section {
+
+    max-width: 1200px;
+    max-height: 1050px;
+    margin: 0 auto;
+}
+
+.destination-text-container {
+    text-align: center;
+}
+
+.destination-text-container h2 {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 22px;
+}
+
+.destination-text-container p {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 44px;
+}
+
+.img-row-1 {
+    object-fit: cover;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+    /* margin-right: 22px; */
+}
+
+.img-row-1 .img1 {
+    margin-right: 22px;
+}
+
+.img-row-2 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+}
+
+.img-row-2 .img4 {
+    margin: 0 22px;
+}
+
+.img-row-3 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-row-3 .img6 {
+    margin-right: 22px;
+    width: 70%;
+}
+
+.destination-img-container img {
+    width: 1100px;
+    height: 280px;
+
+}
+
+.destination-img-container {
+    position: relative;
+    color: #FFF;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.text {
+    position: absolute;
+
+}
+
+.indonesia {
+    position: absolute;
+    top: 120px;
+    left: 240px;
+
+}
+
+.maldiv {
+    position: absolute;
+    top: 120px;
+    left: 840px;
+
+}
+
+.srilanka {
+    position: absolute;
+    top: 120px;
+    left: 130px;
+
+}
+
+.america {
+    position: absolute;
+    top: 110px;
+    left: 560px;
+}
+
+.kashmir {
+    position: absolute;
+    top: 120px;
+    left: 980px;
+
+}
+
+.Bangladesh {
+    position: absolute;
+    top: 125px;
+    left: 180px;
+
+}
+
+.Bandarban {
+    position: absolute;
+    top: 130px;
+    left: 780px;
+}
+
+/* Destination section ends here  */
+
+
+
+/* Why choose us section starts */
+.choose-us-container {
+    max-width: 1200px;
+    min-height: 400px;
+    margin: 100px auto;
+}
+
+.choose-us-heading {
+    text-align: center;
+}
+
+.choose-us-heading h2 {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+.choose-us-heading p {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 45px;
+}
+
+.choose-us-card {
+    display: flex;
+    justify-content: space-between;
+}
+
+.choose-us-card-1 {
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    width: 573px;
+    height: 284px;
+
+}
+
+.choose-us-card-1 * {
+    margin-left: 30px;
+}
+
+.choose-us-card-1 svg {
+    margin-top: 32px;
+}
+
+.choose-us-card-1 h3 {
+    color: #131318;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.choose-us-card-1 p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.choose-us-card-2 {
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+    width: 573px;
+    height: 284px;
+}
+
+.choose-us-card-2 * {
+    margin-left: 30px;
+}
+
+.choose-us-card-2 svg {
+    margin-top: 32px;
+}
+
+.choose-us-card-2 h3 {
+    color: #131318;
+    /* text-align: center; */
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.choose-us-card-2 p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.choose-us-card-3 {
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    width: 573px;
+    height: 284px;
+    margin: 24px auto;
+}
+
+.choose-us-card-3 * {
+    margin-left: 30px;
+}
+
+.choose-us-card-3 svg {
+    margin-top: 32px;
+}
+
+.choose-us-card-3 h3 {
+    color: #131318;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.choose-us-card-3 p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+/* Why choose us section ends */
+
+
+
+/* Get lost section starts here */
+
+.get-lost-container {
+    max-width: 1200px;
+    min-height: 425px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.get-lost-text h2 {
+    color: #131318;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 60px;
+    margin-bottom: 24px;
+}
+
+.get-lost-text p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+
+.get-lost-text li {
+    color: #131318;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+    margin-bottom: 22px;
+    margin-left: 30px;
+}
+
+.get-lost-vedio video {
+    width: 620px;
+    height: 425px;
+    margin-left: 20px;
+    border-radius: 16px;
+    background: linear-gradient(180deg, #131318 -31.96%, rgba(19, 19, 24, 0.00) 100%);
+    object-fit: cover;
+    position: relative;
+}
+
+.video-text {
+    position: relative;
+    /* top: 5px; */
+    /* left: 1200px; */
+    z-index: 1;
+}
+
+.bangladesh {
+    position: absolute;
+    top: 190px;
+    left: 200px;
+    text-align: center;
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+}
+
+/* Get lost section starts here  */
+
+
+/* newsletter section starts here */
+
+.news-letter-container {
+    max-width: 1200px;
+    min-height: 425px;
+    margin: 100px auto;
+    /* display: flex; */
+    justify-content: space-between;
+}
+
+.news-letter-form h3 {
+    color: #131318;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 16px;
+    margin-top: 40px;
+    margin-left: 40px;
+}
+
+.news-letter-form p {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 48px;
+    margin-left: 40px;
+}
+
+.news-letter-form {
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    width: 474px;
+    height: 400px;
+}
+
+.news-letter-form * {
+    margin-left: 20px;
+}
+
+.news-letter-form form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.news-letter-form input {
+    width: 390px;
+    padding: 16px;
+    border: none;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+}
+
+.news-letter-form button {
+    width: 390px;
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    padding: 13px 30px;
+    font-size: 20px;
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+
+
+
+/* newsletter section ends here */
